# webcam_settings

./: .clang-format  CMakeLists.txt  LICENSE.md  README.md  conanfile.txt
.github/workflows/: build.yml  lint.yml  linter.yml
src/: main.cpp  video_capture_devices.cpp  video_capture_devices.h  webcam_settings.cpp  webcam_settings.h  webcam_settings.ui
